added some images to repo\n also cleaned up the look by changing back ground to plain color and changed the bouncy pic

--- a/css/style.css
+++ b/css/style.css
@@ -241,5 +241,6 @@
         #t9,#t10,#t11,#t12   {
             cursor:pointer;
             min-width: 185pt;
-            padding-bottom: 3.5pt;
+            padding-bottom: 10.5pt;
+            margin-right: 7pt;
         }
